--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,10 +13,10 @@
 <header>
     <img class="imgLeft" src="imgs/headShot.jpg" alt="head shot">
     <div class="headerRight">
-    <h3>Name: Gabby Krauss</h3>
-    <h5>Degree: Computing in the Arts</h5>
-    <h5>Graduation Date: May 2020</h5>
-    <h5>Goals: UX Designer or Product Manager</h5>
+    <h5><b>Name:</b> Gabby Krauss</h5>
+        <h5><b>Degree:</b> Computing in the Arts</h5>
+        <h5><b>Graduation Date:</b> May 2020</h5>
+        <h5><b>Goals:</b> UX Designer or Product Manager</h5>
     </div>
 </header>
 
@@ -28,44 +28,36 @@
         <div class="eight columns nav">
             <div class="eight columns nav">
                 <a class="button button-primary" href="#">Home</a>
-                <a class="button" href="#">Our Clients</a>
-                <a class="button" href="#">About Us</a>
-                <a class="button" href="#">Careers</a>
+                <a class="button" href="#">CSCI215</a>
+                <a class="button" href="#">CSCI221</a>
+                <a class="button" href="#">Math207</a>
             </div>
         </div>
     </div>
 </nav>
-</div>
+
 
 <section>
 <!--intro to 3 classes and other form of getting there -->
 <div class="container">
 
-    <div class="row">
+    <div class="program">
         <h4>CITA Program and Experiences:</h4>
-        <div class="col1">
-            <h2>Classes I've taken</h2>
-            <p>little intro to CSCI 215</p>
+        <p>In College of Charleston's School of Science and Math lies Computer Science. My degree
+        however is Computing in the Arts, which is within the Computer Science major</p>
 
-        </div>
-        <div class="col2">
-            <h2>Classes I look forward to</h2>
-            <p>Little intro about CSCI221</p>
 
-        </div>
-        <div class="col3">
-            <h2>Challenges</h2>
-            <p>Info about Math 207</p>
-
-        </div>
     </div>
 </div>
 
 
 
 </section>
-
+</div>
 <footer>
-
+<a href="https://www.cofc.edu/">CofC Website</a><br>
+    <a href="http://compsci.cofc.edu/">CofC Computer Science Website</a><br>
+    <a href= "mailto:kraussg@g.cofc.edu">kraussg@g.cofc.edu</a>
 </footer>
+
 </html>
