--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,9 +28,9 @@
         <div class="eight columns nav">
             <div class="eight columns nav">
                 <a class="button button-primary" href="#">Home</a>
-                <a class="button" href="#">CSCI215</a>
-                <a class="button" href="#">CSCI221</a>
-                <a class="button" href="#">Math207</a>
+                <a class="button" href="CSCI215/csci215.html">CSCI215</a>
+                <a class="button" href="CSCI221/index.html">CSCI221</a>
+                <a class="button" href="Math207/index.html">Math207</a>
             </div>
         </div>
     </div>
@@ -57,7 +57,7 @@
 <footer>
 <a href="https://www.cofc.edu/">CofC Website</a><br>
     <a href="http://compsci.cofc.edu/">CofC Computer Science Website</a><br>
-    <a href= "mailto:kraussg@g.cofc.edu">kraussg@g.cofc.edu</a>
+    <a href= "mailto:kraussgATcofcDOTedu">kraussg@g.cofc.edu</a>
 </footer>
 
 </html>
