--- a/portfolio/CSCI221/index.html
+++ b/portfolio/CSCI221/index.html
@@ -6,12 +6,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="CSS/mainstyle.css">
+    <link rel="stylesheet" href="../CSS/mainstyle.css">
 
 </head>
 <div class="container">
     <header>
-        <img class="imgLeft" src="imgs/headShot.jpg" alt="head shot">
+        <img class="imgLeft" src="../imgs/headShot.jpg" alt="head shot">
         <div class="headerRight">
             <h5><b>Name:</b> Gabby Krauss</h5>
             <h5><b>Degree:</b> Computing in the Arts</h5>
@@ -50,10 +50,10 @@
             </div>
             <h6>Assignments:</h6>
             <ul>
-                <li><a href="#">lab_00</a> </li>
-                <li><a href="#">lab_01</a> </li>
-                <li><a href="#">lab_02</a> </li>
-                <li><a href="#">lab_03</a> </li>
+                <li><a href="#">lab_1</a> </li>
+                <li><a href="#">lab_2</a> </li>
+                <li><a href="#">Homework 1</a> </li>
+
 
             </ul>
             <p>Syllabus: <a href="csci221syl.pdf"></a></p>
