--- a/portfolio/Math207/index.html
+++ b/portfolio/Math207/index.html
@@ -6,12 +6,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="CSS/mainstyle.css">
+    <link rel="stylesheet" href="../CSS/mainstyle.css">
 
 </head>
 <div class="container">
     <header>
-        <img class="imgLeft" src="imgs/headShot.jpg" alt="head shot">
+        <img class="imgLeft" src="../imgs/headShot.jpg" alt="head shot">
         <div class="headerRight">
             <h5><b>Name:</b> Gabby Krauss</h5>
             <h5><b>Degree:</b> Computing in the Arts</h5>
